# team-presence

./: .dockerignore  .gitignore  .mcp.json  Cargo.toml  Dockerfile  Dockerfile.collector  Dockerfile.server  README.md  docker-compose.prod.yml  docker-compose.yml
.claude/skills/tp-connect-machine/: SKILL.md
.claude/skills/tp-create-story/: SKILL.md
.claude/skills/tp-dev-story/: SKILL.md
.claude/skills/tp-edit-story/: SKILL.md
.claude/skills/tp-groom-ac/: SKILL.md
.claude/skills/tp-move-status/: SKILL.md
.claude/skills/tp-plan-sprint/: SKILL.md
.github/workflows/: ci.yml
crates/collector/: Cargo.toml
crates/collector/src/: cli.rs  client.rs  config.rs  consent.rs  credentials.rs  diagnostics.rs  heartbeat.rs  hooks.rs  lib.rs  main.rs  mute.rs  start.rs  telemetry.rs  test_support.rs  ws_client.rs
crates/collector/src/capture/: codex.rs  hook_socket.rs  mod.rs  opencode.rs  transcript.rs
crates/server/: Cargo.toml
crates/server/migrations/: 001_users.sql  002_user_sessions.sql  003_collector_tokens.sql  004_stories.sql  005_tasks.sql  006_sessions_meta.sql  007_sprint_and_story_fields.sql  008_hive_schema_extension.sql  009_comments.sql  010_agent_kind.sql  011_priority_p0.sql  012_agent_kind_opencode.sql
crates/server/src/: collectors.rs  error.rs  lib.rs  main.rs  mcp.rs  state.rs  telemetry.rs
crates/server/src/auth/: handlers.rs  jwt.rs  mod.rs  model.rs  password.rs
crates/server/src/comments/: handlers.rs  mod.rs  model.rs  tests.rs
crates/server/src/downloads/: handlers.rs  install.sh.tpl  install_script.rs  mod.rs
crates/server/src/epics/: handlers.rs  model.rs  tests.rs
crates/server/src/session/: emit.rs  handlers.rs  link.rs  mod.rs  model.rs  reaper.rs  repo.rs
crates/server/src/sprints/: handlers.rs  mod.rs  model.rs  repo.rs  tests.rs
crates/server/src/sse/: activity.rs  grid.rs  mod.rs  room.rs
crates/server/src/stories/: activity.rs  handlers.rs  import.rs  mod.rs  model.rs  repo.rs  tests.rs
crates/server/src/tasks/: handlers.rs  model.rs  repo.rs  tests.rs
crates/server/src/ws/: collector.rs
crates/server/tests/: downloads.rs  install_script.rs  redis_emit.rs  remote_mcp.rs
crates/server/tests/fixtures/bmad_sample/: 01-with-frontmatter.md  02-h1-only.md  03-filename-fallback.md  04-unicode.md  05-unknown-status.md
crates/shared-types/: Cargo.toml
crates/shared-types/src/: lib.rs
crates/tp-mcp/: Cargo.toml
crates/tp-mcp/src/: api.rs  error.rs  lib.rs  main.rs  server.rs
docker/: entrypoint.sh
docs/: ai-native.md
docs/design/: README.md
docs/design/chats/: chat1.md
docs/design/project/: Hive.html
docs/design/project/src/: App.jsx  Icon.jsx  ModernApp.jsx  ModernScreens.jsx  ModernTerminal.jsx  ModernUI.jsx  TerminalStream.jsx  data.jsx  hive_ui.jsx  ui.jsx
docs/design/project/src/screens/: Backlog.jsx  Compute.jsx  Kanban.jsx  Member.jsx  Onboarding.jsx  Overview.jsx  StoryDetail.jsx  TerminalWall.jsx
docs/design/project/styles/: tokens.css
scripts/: build-release-binaries.sh
web/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts
web/public/: agent-setup.md
web/src/: App.tsx  api.ts  auth.tsx  epics.ts  index.css  sprints.ts  stories.ts  types.ts  users.ts
web/src/components/: AcChecklist.tsx  CommentThread.tsx  CreateStoryDialog.tsx  KanbanColumn.tsx  ReassignStoryDropdown.tsx  RelationsEditor.tsx  StdoutStream.tsx  StoryCard.tsx  StoryDetailDialog.tsx  StoryMetaBar.tsx  Tile.tsx  TopNav.tsx
web/src/design/: AgentChip.tsx  Avatar.tsx  BurnupChart.tsx  Button.tsx  Card.tsx  Chip.tsx  Icon.tsx  InstallCommandCard.tsx  Kbd.tsx  LiveDot.tsx  MarkdownEditor.tsx  MarkdownView.tsx  Panel.tsx  Priority.tsx  ProgressBar.tsx  StatusIcon.tsx  StatusPill.tsx  StoryId.tsx  ZiraLogo.tsx  markdown-view.css  meta.ts  tiptap-extensions.ts  tokens.css
web/src/hooks/: useSessionTools.ts  useSseGrid.ts  useSseRoom.ts  useStoryActivity.ts  useStoryActivityStream.ts  useStoryDraft.ts
web/src/pages/: AgentSetup.tsx  Backlog.tsx  Board.tsx  Compute.tsx  Connect.tsx  CurrentStory.tsx  Grid.tsx  Kanban.tsx  Login.tsx  Members.tsx  Overview.tsx  Placeholder.tsx  Register.tsx  Room.tsx  Sprints.tsx  Stories.tsx  Stream.tsx
web/src/pages/board/: BoardColumn.tsx  CardActionMenu.tsx  StoryCard.tsx
web/src/pages/sprints/: EpicsTab.tsx
web/src/pages/story-panels/: ChangesPanel.tsx  EmptyPanel.tsx  RelatedPanel.tsx  RunsPanel.tsx
web/src/shell/: AppShell.tsx  CommandPalette.tsx  Masthead.tsx  NavBar.tsx  Sidebar.tsx  StatusBar.tsx  TopMeta.tsx  Topbar.tsx  TweaksPanel.tsx  nav.ts  useTweaks.ts
web/src/terminal/: Terminal.tsx  TerminalLine.tsx
