[workspace]
resolver = "2"
members = [
    "crates/server",
    "crates/collector",
    "crates/shared-types",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
axum = { version = "0.7", features = ["macros", "ws"] }
axum-extra = { version = "0.9", features = ["cookie", "typed-header"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["trace", "cors"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }
redis = { version = "0.27", features = ["tokio-comp"] }
argon2 = "0.5"
jsonwebtoken = "9"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
time = "0.3"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
keyring = { version = "3", default-features = false, features = ["apple-native", "sync-secret-service", "linux-native", "windows-native"] }
directories = "5"
libc = "0.2"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
tempfile = "3"
url = "2"
async-stream = "0.3"
tokio-stream = "0.1"
