[package]
name = "team-presence-collector"
version.workspace = true
edition.workspace = true

[dependencies]
team-presence-shared-types = { path = "../shared-types" }

serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true
clap.workspace = true
reqwest.workspace = true
keyring.workspace = true
directories.workspace = true
libc.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
url.workspace = true

[dev-dependencies]
tempfile.workspace = true

[[bin]]
name = "team-presence"
path = "src/main.rs"
