[package]
name = "team-presence-server"
version.workspace = true
edition.workspace = true

[dependencies]
team-presence-shared-types = { path = "../shared-types" }

serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true
axum.workspace = true
axum-extra.workspace = true
tower.workspace = true
tower-http.workspace = true
sqlx.workspace = true
redis.workspace = true
argon2.workspace = true
jsonwebtoken.workspace = true
sha2.workspace = true
hex.workspace = true
rand.workspace = true
time.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"
