[package]
name = "team-presence-server"
version.workspace = true
edition.workspace = true

[dependencies]
team-presence-shared-types = { path = "../shared-types" }

serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true
axum.workspace = true
axum-extra.workspace = true
tower.workspace = true
tower-http.workspace = true
sqlx.workspace = true
redis.workspace = true
argon2.workspace = true
jsonwebtoken.workspace = true
sha2.workspace = true
hex.workspace = true
rand.workspace = true
time.workspace = true
serde_yaml.workspace = true
async-stream.workspace = true
tokio-stream.workspace = true
futures-util.workspace = true
regex.workspace = true
once_cell.workspace = true

[dev-dependencies]
tempfile.workspace = true
# `ServiceExt::oneshot` for in-process route testing
tower = { version = "0.5", features = ["util"] }
# sha2 is already a runtime dep, but declared here too so tests can rely on it.
sha2.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "import-bmad"
path = "src/bin/import_bmad.rs"

[[bin]]
name = "reset-pw"
path = "src/bin/reset_pw.rs"
