[package]
name = "team-presence-tp-mcp"
version.workspace = true
edition.workspace = true

[dependencies]
team-presence-collector = { path = "../collector" }

rmcp = { version = "1.5", features = ["server", "transport-io", "macros", "schemars"] }
schemars = "1"

serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true
reqwest.workspace = true
url.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "tp-mcp"
path = "src/main.rs"
